<resources>
    <string name="app_name">Example Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="action_create_a_new_account">Create a new account?</string>
    <string name="action_sign_in">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_create">Create</string>
    <string name="hint_input_name">Name</string>
    <string name="hint_input_email">Email</string>
    <string name="hint_input_password">Password</string>
    <string name="hint_input_password_confirm">Password confirm</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_expenses_list">Expenses list</string>
    <string name="navigation_new_expenses">New expenses</string>
    <string name="navigation_expenses_per_week">Expenses per week</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="title_activity_new_expenses">NewExpensesActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_create_new_expense">Create Expense</string>
    <string name="hint_input_comment">Comment</string>
    <string name="hint_input_date">Date</string>
    <string name="hint_input_time">Time</string>
    <string name="hint_input_amount">Amount</string>
    <string name="hint_input_description">Description</string>
    <string name="hint_create_new_expense">Create a new experense</string>
    <string name="hint_expenses_list">Expenses list</string>
    <string name="hint_new_expenses">+Add expense</string>
    <string name="text_button_filter">Filter by</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="title_dialog_delete_expense">Delete expense</string>
    <string name="message_dialog_delete_expense">Are you want to delete this expense?</string>
    <string name="hint_expenses_details">Expense details</string>

    <!-- DateUtils -->
    <string name="DateUtils_just_now">Now</string>
    <string name="DateUtils_minutes_ago">%d min</string>
    <string name="DateUtils_today">Today</string>
    <string name="DateUtils_yesterday">Yesterday</string>

    <string name="DeviceListItem_today">Today</string>
    <!-- plurals.xml -->
    <plurals name="hours_ago">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

<string name="large_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium amet commodi dicta dolor ea exercitationem incidunt laborum magnam molestiae nemo, nostrum officia porro quis quisquam repellendus totam velit vitae?
</string>
    <string name="text_button_delete">Delete</string>
    <string name="text_button_edit">Edit</string>
    <string name="hint_result">Result</string>
    <string name="text_week">Week:</string>
    <string name="text_avg">Avg day spending</string>
</resources>
