<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.newexpenses.NewExpensesActivity_">

    <LinearLayout
        android:id="@+id/inputParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/editDescription"
            style="@style/ExpensesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_expenses_edit"
            android:hint="@string/hint_input_description" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_input_amount"
            android:inputType="number"
            android:paddingTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/dateEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:hint="@string/hint_input_date" />

            <EditText
                android:id="@+id/timeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:hint="@string/hint_input_time" />
        </LinearLayout>


        <EditText
            android:id="@+id/editComment"
            style="@style/ExpensesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_input_comment" />

        <Button
            android:id="@+id/createAction"
            style="@style/ExpensesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/action_save" />
    </LinearLayout>
</RelativeLayout>