<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.expensesperweek.ExpensesPerWeekFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/hint"
            style="@style/ExpensesCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:text="@string/hint_expenses_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint"
            android:background="#0D000000"
            android:padding="8dp"
            android:weightSum="3">

            <Button
                style="@style/ExpensesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_filter"
                android:textAllCaps="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_expenses_edit2"
                android:hint="@string/hint_from"
                android:padding="8dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/drawable_expenses_edit2"
                android:hint="@string/hint_to"
                android:padding="8dp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        style="@style/ExpensesCaption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:paddingBottom="16dp"
        android:text="@string/hint_result" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listWeeks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_list_week" />
</LinearLayout>