<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.expensesdetails.ExpenseDetailsFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/hint"
            style="@style/ExpensesCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/hint_expenses_details" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:background="#1A00897B"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="24dp">

        <RelativeLayout
            android:id="@+id/rootParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp">

            <FrameLayout
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/drawable_expenses_list_image"
                    android:padding="16dp"
                    android:src="@drawable/ic_attach_money"
                    android:tint="#80000000"
                    android:tintMode="src_in" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/infoExpenseParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/dateInfoParent"
                android:layout_toRightOf="@id/image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/expenseTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Expenses001" />

                <TextView
                    android:id="@+id/expenseAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$200"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateInfoParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/expenseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="12 jun 2015 - 18 jun 2015" />

                <TextView
                    android:id="@+id/expenseTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="08:00 pm"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/expenseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/large_text" />

        <LinearLayout
            android:id="@+id/actionParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                style="@style/ExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_edit"
                android:textAllCaps="false" />

            <Button
                style="@style/ExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/text_button_delete"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>